[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/game_background.gd" type="Script" id=1]
[ext_resource path="res://Scripts/level_scene.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/undo.png" type="Texture" id=4]
[ext_resource path="res://Sprites/cancel.png" type="Texture" id=5]
[ext_resource path="res://Sprites/confirm.png" type="Texture" id=6]
[ext_resource path="res://Scenes/guide_lines.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/options_panel.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/star_blank.png" type="Texture" id=9]
[ext_resource path="res://Sprites/star_filled.png" type="Texture" id=10]
[ext_resource path="res://Audio/somfilamentowav.wav" type="AudioStream" id=11]
[ext_resource path="res://Sprites/options.png" type="Texture" id=12]
[ext_resource path="res://Sprites/advance.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.827451, 0, 1 )
border_color = Color( 0, 0.780392, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0.784314, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float width : hint_range(0.0, 30.0);
uniform vec4 outline_color : hint_color;

void fragment()
{
	float size = width / float(textureSize(TEXTURE, 0).x);
	
	vec4 sprite_color = texture(TEXTURE, UV);
	float alpha = -4.0 * sprite_color.a;
	alpha += texture(TEXTURE, UV + vec2(size, 0.0)).a;
	alpha += texture(TEXTURE, UV + vec2(-size, 0.0)).a;
	alpha += texture(TEXTURE, UV + vec2(0.0, size)).a;
	alpha += texture(TEXTURE, UV + vec2(0.0, -size)).a;
	
	vec4 final_color = mix(sprite_color, outline_color, clamp(alpha, 0.0, 1.0));
	COLOR = vec4(final_color.rgb, clamp(abs(alpha) + sprite_color.a, 0.0, 1.0));
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/width = 3.0
shader_param/outline_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 3 )

[node name="LevelNode" type="Node2D"]
script = ExtResource( 2 )
goal_met = ExtResource( 10 )
goal_not_met = ExtResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Traces"

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GuideLines" parent="." instance=ExtResource( 7 )]

[node name="LblNumber" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "#"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="TextureButton" parent="."]
margin_left = 914.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 110.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 12 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 20.0
margin_top = 520.0
margin_right = 283.0
margin_bottom = 545.0
rect_min_size = Vector2( 263, 25 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TraceLength" type="Label" parent="."]
visible = false
margin_left = 20.5
margin_top = 517.5
margin_right = 103.5
margin_bottom = 546.5
custom_fonts/font = SubResource( 4 )
text = "#"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalMet" type="TextureRect" parent="."]
material = SubResource( 6 )
use_parent_material = true
margin_left = 136.0
margin_top = 516.0
margin_right = 166.0
margin_bottom = 546.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlButtons" type="HBoxContainer" parent="."]
margin_left = 724.0
margin_top = 466.0
margin_right = 1089.0
margin_bottom = 546.0
rect_min_size = Vector2( 0, 80 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoButton" type="TextureButton" parent="ControlButtons"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 4 )
expand = true

[node name="EraseButton" type="TextureButton" parent="ControlButtons"]
margin_left = 95.0
margin_right = 175.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
disabled = true
texture_normal = ExtResource( 5 )
expand = true

[node name="RedoButton" type="TextureButton" parent="ControlButtons"]
visible = false
margin_left = 190.0
margin_right = 270.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
expand = true

[node name="ConfirmButton" type="TextureButton" parent="ControlButtons"]
margin_left = 190.0
margin_right = 270.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
disabled = true
texture_normal = ExtResource( 6 )
expand = true

[node name="AdvanceButton" type="TextureButton" parent="ControlButtons"]
margin_left = 285.0
margin_right = 365.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
disabled = true
texture_normal = ExtResource( 13 )
expand = true

[node name="Hint" type="Label" parent="."]
margin_left = 312.0
margin_top = 524.0
margin_right = 410.0
margin_bottom = 551.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0.756863, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsPanel" parent="." instance=ExtResource( 8 )]

[node name="PanelContainer" parent="OptionsPanel/CenterContainer" index="0"]
margin_top = 37.0
margin_bottom = 539.0

[node name="MarginContainer2" parent="OptionsPanel/CenterContainer/PanelContainer" index="0"]
margin_bottom = 502.0

[node name="VBoxContainer" parent="OptionsPanel/CenterContainer/PanelContainer/MarginContainer2" index="0"]
margin_bottom = 482.0

[node name="ScrollContainer" parent="OptionsPanel/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer" index="1"]
margin_bottom = 462.0
scroll_vertical = 100

[node name="VBoxContainer" parent="OptionsPanel/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer" index="0"]
margin_bottom = 230.0

[node name="Tutu" parent="OptionsPanel/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer" index="4"]
visible = false

[node name="Github" parent="OptionsPanel/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer" index="5"]
visible = false

[node name="MenuButton" parent="OptionsPanel/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer" index="7"]
margin_top = 180.0
margin_bottom = 230.0
[connection signal="gui_input" from="Background" to="." method="_on_Background_gui_input"]
[connection signal="pressed" from="MenuButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ControlButtons/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="ControlButtons/EraseButton" to="." method="_on_EraseButton_pressed"]
[connection signal="pressed" from="ControlButtons/RedoButton" to="." method="_on_RedoButton_pressed"]
[connection signal="pressed" from="ControlButtons/ConfirmButton" to="." method="_on_TraceButton_pressed"]
[connection signal="pressed" from="ControlButtons/AdvanceButton" to="." method="_on_AdvanceButton_pressed"]
[connection signal="pressed" from="OptionsPanel/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]

[editable path="OptionsPanel"]
